--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="logo">
-  <img src="WhatsApp_Image_2025-06-09_at_14.35.55_bd16987c-removebg-preview.png" alt="Logo Margasatvva" style="height: 65px;">
+  <img src="LOGO MARGASATVVA.png" alt="Logo Margasatvva" style="height: 65px;">
 </div>
 <h1 class="judul">MARGASATVVA</h1>
     <nav>
@@ -29,12 +29,12 @@
 
 </h3><h3>We chose this name because it perfectly captures our spirit: wild, free, and true to nature. It's a tribute to the raw beauty and untamed essence of the natural world, and that's exactly what we aim to embody.</h3></div>
     <div class="box">
-  <img src="WhatsApp_Image_2025-06-09_at_17.14.15_4c0b030c-removebg-preview (1).png" alt="Maskot Produk" class="maskot-img">
+  <img src="MASKOT MARGASATVVA.png" alt="Maskot Produk" class="maskot-img">
 </div>
   </section>
   <section>
 <div class="video1">
-  <video controls src="WhatsApp Video 2025-06-11 at 12.03.57_c4f633a4.mp4">
+  <video controls src="VIDEO PERKENALAN.mp4">
     <video autoplay>
   </video>
   <video autoplay>
