--- a/design-process.html
+++ b/design-process.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="logo">
-  <img src="WhatsApp_Image_2025-06-09_at_14.35.55_bd16987c-removebg-preview.png" alt="Logo Margasatvva" style="height: 65px;">
+  <img src="LOGO MARGASATVVA.png" alt="Logo Margasatvva" style="height: 65px;">
 </div>
 <h1 class="judul">MARGASATVVA</h1>
     <nav>
